[package]
name = "rs-ws-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
sha1 = "0.10.6"
base64 = "0.22.0"
bitreader = "0.3.8"
